<resources>
    <string name="app_name">avada kedavra</string>
    <string name="house">Casa: </string>
    <string name="gender">Gênero: </string>
    <string name="dateOfBirth">Data de aniversário: </string>
    <string name="patronus">Patrono: </string>
    <string name="ok">OK</string>
    <string name="no_internet_connection">Sem conexão com a internet</string>
    <string name="house_null">Casa nula</string>
    <string name="url_null">Url nula</string>
    <string name="couldnt_get_data">Não foi possível obter os dados</string>
    <string name="error">Erro: </string>
    <string name="filters">Filtros</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="onlyStudents">Somente estudantes: </string>
    <string name="all">Todas</string>
    <string name="error_deleting_data">Erro ao deletar dados do banco de dados</string>
    <string-array name="house_list">
        <item>Grifinória</item>
        <item>Lufa-lufa</item>
        <item>Corvinal</item>
        <item>Sonserina</item>
    </string-array>
</resources>
