<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>
        <variable
            name="character"
            type="com.example.avadakedavra.model.models.Character" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:id="@+id/characterDetails"
        >

        <LinearLayout
            android:id="@+id/imageAndName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/characterImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@{character.image}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/characterName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@{character.name}"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtHouse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/house"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageAndName"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/txtGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtHouse"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/txtDateOfBirth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dateOfBirth"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtGender"
            android:layout_marginTop="10dp"
            />


        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patronus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDateOfBirth"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/characterHouse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{character.house}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageAndName"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/characterGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{character.gender}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/characterHouse"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/characterDateOfBirth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{character.dateOfBirth}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/characterGender"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/characterPatronus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{character.patronus}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/characterDateOfBirth"
            android:layout_marginTop="10dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>